--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,3 @@
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
 
 
 body {
@@ -66,14 +61,13 @@ label {
 input {
     width: 95%;
     font-size: 5.5vw;
+    box-sizing: content-box;
     padding: 2.5% 1%;
     margin: 1%;
-    border-radius: 10px;
-    /*box-shadow: 5px 5px 3px -1px #2F89FC;*/
-}
-
-input:focus {
-    border: #2F89FC 2px solid;
+    border: darkgray 1px solid;
+    background-repeat: no-repeat;
+    background-position: right;
+    background-color: white;
 }
 
 select {
@@ -82,11 +76,12 @@ select {
     box-sizing: content-box;
     padding: 2.5% 1%;
     margin: 1%;
-    border-radius: 10px;
-}
-
-select:focus {
-    border: #2F89FC 2px solid;    
+    border: darkgray 1px solid;
+    background: url('../res/keyboard_arrow_down-black-18dp.svg');
+    background-repeat: no-repeat;
+    background-position: right;
+    background-color: white;
+    -webkit-appearance: none;
 }
 
 select option span {
@@ -127,10 +122,6 @@ select option span {
         border: darkgray 1px solid;
     }
 
-    input:focus {
-        border: #2F89FC 2px solid;
-    }
-
     select {
         font-size: 30px;
         padding: 2% 1%;
@@ -140,10 +131,6 @@ select option span {
         background-position: right;
         background-color: white;
         -webkit-appearance: none;
-    }
-
-    select:focus {
-        border: #2F89FC 2px solid;    
     }
 
 }
